@@ -1,7 +1,7 @@
 /*
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  *
- * Copyright (c) 2010-2011 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2010-2013 Oracle and/or its affiliates. All rights reserved.
  *
  * The contents of this file are subject to the terms of either the GNU
  * General Public License Version 2 only ("GPL") or the Common Development
@@ -110,7 +110,7 @@ import com.sun.jersey.spi.inject.SingletonTypeInjectableProvider;
  * An abstract Web component that may be extended a Servlet and/or
  * Filter implementation, or encapsulated by a Servlet or Filter implementation.
  *
- * @author Paul.Sandoz@Sun.Com
+ * @author Paul Sandoz (paul.sandoz at oracle.com)
  */
 public class WebComponent implements ContainerListener {
     /**
@@ -420,13 +420,9 @@ public class WebComponent implements ContainerListener {
             throw new ServletException(ex.getCause());
         } catch (ContainerException ex) {
             traceOnException(cRequest, response);
-            // TODO: this needs to become generic (not servlet specific only)
-            //            responseListener.onError(Thread.currentThread().getId(), ex);
             throw new ServletException(ex);
         } catch (RuntimeException ex) {
             traceOnException(cRequest, response);
-            // TODO: this needs to become generic (not servlet specific only)
-            //            responseListener.onError(Thread.currentThread().getId(), ex);
             throw ex;
         } finally {
             UriRuleProbeProvider.requestEnd();
